        + OpenBSD 5.9.

    * Drop support for old distribution releases:
        - Ubuntu 15.10 (code name: wily).
        - Debian 7 (code name: Wheezy).

          Debian 8 was released on April 25, 2015, and Debian team will stop
          offer security updates for Debian 7 after April 25, 2016.
          Reference: https://wiki.debian.org/DebianOldStable

    * Improvements:
        + SOGo is configured to store password in SSHA512 (instead of ssha) hash by default.
        + Switch OpenLDAP backend to mdb (Memory-Mapped DB backend to slapd)
          on Linux and FreeBSD (not available on OpenBSD yet).
        + Switch SOGo to 3.x from 2.x on Linux distributions. It relies on
          ports tree on BSD distributions.
        + Able to enable/disable sogo service for a single user with new SQL
          column `mailbox.enablesogo` and LDAP attribute/value
          `enabledService=sogo`.
        + Supports Postfix parameter `sender_dependent_relayhost_maps`.

    * Fixed issues:
        - Not correctly add Postfix alias 'virusalert: root' for
          non-(Debian/Ubuntu) OSes.
        - Not create directory used to store php session files.
        - Not enable cron job to auto update SpamAssassin rules on RHEL/CentOS.

iRedMail-0.9.4:
    * New scripts:
        - tools/fail2ban_unban_ip.sh. Used to unban specified IP addresses
          from ALL fail2ban jails.

    * Fixed issues:
        - Not enable port 25 in OpenBSD PF rule.
        - Not detect IPv6 support on server.
        - Not correct set file permission of /etc/mail/mailer.conf on FreeBSD.
        - Not install port 'www/sogo-activesync' on FreeBSD.
        - Installation inside FreeBSD Jail:
            - Not correctly set MySQL/PostgreSQL/SOGo/Amavisd bind addresses.
            - Not updating Postfix `mynetworks=` to use specified local
              address.
              Thanks Peter2121 <peter _at_ flytrace.com> for the report in forum.